<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:scrollbars="vertical"
    tools:context=".MainActivity" >
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <!-- Content of blocks -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TextView
                android:layout_width="@dimen/block_dp_size"
                android:layout_height="@dimen/block_dp_size"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/block_dp_text"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/block_dp_text"
                android:background="#55FD4D02" />
            <TextView
                android:layout_width="@dimen/block_px_size"
                android:layout_height="@dimen/block_px_size"
                android:layout_marginTop="5dp"
                android:layout_gravity="end"
                android:gravity="center"
                android:text="@string/block_px_text"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/block_px_text"
                android:background="#55024DFD" />
        </LinearLayout>

        <!-- Content of display info -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resolution_label"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resolution_width"
                    android:textColor="#DD5555" />

                <TextView
                    android:id="@+id/resolution_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resolution_height"
                    android:textColor="#DD5555" />

                <TextView
                    android:id="@+id/resolution_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dpi_label"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dpi_width" />

                <TextView
                    android:id="@+id/dpi_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dpi_height" />

                <TextView
                    android:id="@+id/dpi_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/density_dpi"
                    android:textColor="#DD5555" />

                <TextView
                    android:id="@+id/density_dpi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/density_label"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/density" />

                <TextView
                    android:id="@+id/density"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dip_label"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dip_width" />

                <TextView
                    android:id="@+id/dip_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dip_height" />

                <TextView
                    android:id="@+id/dip_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suggestion_label"
                android:textStyle="bold"
                android:textColor="#FF2222" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggestion_values" />

                <TextView
                    android:id="@+id/suggestion_values_simple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggestion_values" />

                <TextView
                    android:id="@+id/suggestion_values"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suggestion_values_land" />

                <TextView
                    android:id="@+id/suggestion_values_land"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#00AAAA" />
            </LinearLayout>
        </LinearLayout>
    </FrameLayout>
</ScrollView>
